# bec_atlas

./: .gitignore  .gitlab-ci.yml  .python-version  .releaserc.json  CHANGELOG.md  LICENSE  README.md
backend/: pyproject.toml
backend/bec_atlas/: authentication.py  main.py
backend/bec_atlas/datasources/: datasource_manager.py  endpoints.py  redis_datasource.py
backend/bec_atlas/deployment/: .functional_accounts.json
backend/bec_atlas/ingestor/: __init__.py  access_models.md  data_ingestor.py  deployment_ingestor.py  ingestor_base.py  message_service_ingestor.py  ms_teams_ingestor.py  proposal_ingestor.py  scilog_logbook_manager.py  signal_manager.py
backend/bec_atlas/model/: model.py
backend/bec_atlas/router/: base_router.py  bec_access_router.py  deployment_access_router.py  deployment_credentials.py  deployments_router.py  health_router.py  messaging_service_router.py  realm_router.py  redis_router.py  scan_router.py  session_router.py  user.py  user_router.py
backend/bec_atlas/utils/: bec_atlas_get_key.py  bec_atlas_update.py  demo_database_setup.py  env_loader.py  launch.py  ldap_auth.py  service_handler.py  setup_database.py  tmux_launch.py
backend/ci/: healthchecks.py  setup_database.py
backend/tests/: Dockerfile.run_pytest  conftest.py  coverage_run.sh  docker-compose.yml  export_test_data.py  test_authentication.py  test_bec_atlas_get_key.py  test_bec_atlas_update.py  test_deployment_access_router.py  test_deployment_credentials.py  test_deployment_ingestor.py  test_deployment_router.py  test_event_subscriber.py  test_health_router.py  test_login.py  test_messaging_service_ingestor.py  test_messaging_service_router.py  test_mongodb_aggregation.py  test_mongodb_datasource_filters.py  test_ms_teams_ingestor.py  test_openapi_generation.py  test_proposal_ingestor.py  test_redis_router.py  test_redis_websocket.py  test_run_migrations.py  test_scan_ingestor.py  test_scans_router.py  test_scilog_logbook_manager.py  test_signal_group_manager.py  test_signal_manager.py  test_signal_messages.py
backend/tests/test_data/: bec_atlas.deployment_access.json  bec_atlas.deployment_credentials.json  bec_atlas.deployments.json  bec_atlas.messaging_services.json  (+4 more)
backend/utils/: nginx.conf  sls_deployments.yaml
(+142 files in other folders)
